# SIT

./: .gitignore  Cargo.toml
sit_client/: .gitignore  Cargo.toml  config.toml
sit_client/migrations/2024-01-01-151939_init_setup/: down.sql  up.sql
sit_client/src/: config.rs  hardware.rs  licenses.rs  main.rs  server.rs  service_mgmt.rs  software.rs  system_status.rs  win_os_info.rs
sit_client/src/database/: mod.rs  model.rs  schema.rs  task.rs
sit_client/src/win_core/: power.rs
sit_lib/: Cargo.toml
sit_lib/src/: hardware.rs  lib.rs  licenses.rs  os.rs  server.rs  software.rs  system_status.rs  task.rs
sit_server/: .gitignore  Cargo.toml  Rocket.toml
sit_server/migrations/2022-07-02-140731_initial_setup/: down.sql  up.sql
sit_server/migrations/2022-07-21-190858_make_uuid_unique/: down.sql  up.sql
sit_server/migrations/2022-10-31-123607_create_profiles/: down.sql  up.sql
sit_server/migrations/2022-11-05-234248_create_hardware_tables/: down.sql  up.sql
sit_server/migrations/2022-11-06-005420_rename_address_width/: down.sql  up.sql
sit_server/migrations/2022-12-09-205547_add_memory_bank/: down.sql  up.sql
sit_server/migrations/2022-12-20-143337_software_reorganization/: down.sql  up.sql
sit_server/migrations/2023-04-01-140645_add-memory-view/: down.sql  up.sql
sit_server/migrations/2023-04-04-094017_remove-unique-from-bank-label/: down.sql  up.sql
sit_server/migrations/2023-04-21-155148_volume-status/: down.sql  up.sql
sit_server/migrations/2023-04-21-180151_licenses/: down.sql  up.sql
sit_server/migrations/2023-04-25-065359_add-userprofile-path-size/: down.sql  up.sql
sit_server/migrations/2023-05-11-142259_add_basic_user_system/: down.sql  up.sql
sit_server/migrations/2023-07-16-193010_split_domain_username_for_user/: down.sql  up.sql
sit_server/migrations/2023-07-24-123109_task_mangement/: down.sql  up.sql
sit_server/migrations/2024-10-13-202330_create_battery_status/: down.sql  up.sql
sit_server/migrations/2025-01-28-145238_user_profile_allow_last_use_time_null/: down.sql  up.sql
sit_server/migrations/2025-01-28-150708_allow_multiple_graphics_card/: down.sql  up.sql
sit_server/src/: api_v1.rs  clients.rs  display_util.rs  hardware.rs  main.rs  ms_magic.rs  profile.rs  software.rs  system_status.rs
sit_server/src/auth/: mod.rs
sit_server/src/database/: domain_user.rs  mod.rs  model.rs  schema.rs  task.rs
sit_server/src/web/: api_v1.rs  api_v2.rs  auth.rs  clients.rs  display_util.rs  hardware.rs  mod.rs  profile.rs  settings.rs  software.rs  system_status.rs
sit_server/static/font/: SanukWebPro-Bold.eot  SanukWebPro.eot
sit_server/static/style/: font.css  login.css  main.css
sit_server/templates/: _layout_client-bottom.html.hbs  _layout_client-top.html.hbs  _layout_hardware-top.html.hbs  _layout_settings-top.html.hbs  _layout_software-bottom.html.hbs  _layout_software-top.html.hbs  _layout_system_status-top.html.hbs  client.html.hbs  client_hardware.html.hbs  client_profiles.html.hbs  client_software.html.hbs  hardware.html.hbs  index.html.hbs  main-bottom.html.hbs  main-top.html.hbs  profile.html.hbs  profiles.html.hbs  software.html.hbs  software_computer_list.html.hbs  software_info.html.hbs  software_version.html.hbs  system_status.html.hbs
sit_server/templates/auth/: index.html.hbs  login.html.hbs  new_user.html.hbs
sit_server/templates/clients/: client.html.hbs  hardware.html.hbs  index.html.hbs  licenses.html.hbs  profiles.html.hbs  profiles_path.html.hbs  software.html.hbs  status.html.hbs
sit_server/templates/hardware/: bios.html.hbs  clients.html.hbs  disks.html.hbs  graphics_cards.html.hbs  memory.html.hbs  models.html.hbs  network_adapters.html.hbs  processors.html.hbs
sit_server/templates/profile/: index.html.hbs
sit_server/templates/settings/: index.html.hbs  service.html.hbs  service_software.html.hbs  users.html.hbs  users_new.html.hbs
sit_server/templates/software/: index.html.hbs  license_computer.html.hbs  license_list.html.hbs  os_computer.html.hbs  os_list.html.hbs  os_version.html.hbs  os_version_computer.html.hbs  software.html.hbs  software_computer_list.html.hbs  software_list.html.hbs  software_version.html.hbs
sit_server/templates/system_status/: volumes.html.hbs
(+2 files in other folders)
