cargo-features = ["per-package-target"]

[package]
name = "sit_client"
version = "1.0.4"
edition = "2021"
default-target = "x86_64-pc-windows-gnu"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wmi = "0.12"
winreg = { version = "0.11", features = ["serialization-serde"] }
sit_lib = { path = "../sit_lib" }
reqwest = { version = "0.11", features = ["json", "blocking"] }
job_scheduler_ng = "2"
anyhow = "1"
uuid = { version = "1", features = ["serde"] }
windows-service = "0.6"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
clap = "4"
walkdir = "2"
windows = { version = "0.44", features = ["Win32_Foundation", "Win32_Security", "Win32_Security_Authorization", "Win32_System_Memory"] }
