[package]
name = "sit_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
rocket = { version = "0.5.0", features = ["json", "uuid", "secrets"] }
rocket_dyn_templates = { version = "0.1.0", features = ["handlebars"] }
diesel = { version = "2", features = [
    "postgres",
    "uuid",
    "r2d2",
    "numeric",
    "chrono",
    "serde_json",
] }
diesel_migrations = { version = "2", features = ["postgres"] }
diesel-derive-enum = { version = "2", features = ["postgres"] }
dotenv = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
sit_lib = { path = "../sit_lib" }
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
bigdecimal = { version = "0.4", features = ["serde"] }
urlencoding = "2"
password-hash = { version = "0.5" }
argon2 = { version = "0.5", features = ["password-hash"] }
rand = { version = "0.8" }
